tests/ui/parser/recover/recover-pat-ranges.stderr
error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:5:13
   |
LL |         0..=(1) => (),
   |             ^ ^
   |
help: remove these parentheses
   |
LL -         0..=(1) => (),
LL +         0..=1 => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:7:9
   |
LL |         (-12)..=4 => (),
   |         ^   ^
   |
help: remove these parentheses
   |
LL -         (-12)..=4 => (),
LL +         -12..=4 => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:9:9
   |
LL |         (0)..=(-4) => (),
   |         ^ ^
   |
help: remove these parentheses
   |
LL -         (0)..=(-4) => (),
LL +         0..=(-4) => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:9:15
   |
LL |         (0)..=(-4) => (),
   |               ^  ^
   |
help: remove these parentheses
   |
LL -         (0)..=(-4) => (),
LL +         (0)..=-4 => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:14:9
   |
LL |         (4).. => (),
   |         ^ ^
   |
help: remove these parentheses
   |
LL -         (4).. => (),
LL +         4.. => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:16:9
   |
LL |         (-4 + 0).. => (),
   |         ^      ^
   |
help: remove these parentheses
   |
LL -         (-4 + 0).. => (),
LL +         -4 + 0.. => (),
   |

error: range pattern bounds cannot have parentheses
  --> $DIR/recover-pat-ranges.rs:19:9
   |
LL |         (1 + 4)...1 * 2 => (),
   |         ^     ^
   |
help: remove these parentheses
   |
LL -         (1 + 4)...1 * 2 => (),
LL +         1 + 4...1 * 2 => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:12:12
   |
LL |         ..=1 + 2 => (),
   |            ^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = 1 + 2;
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         ..=VAL => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:16:10
   |
LL |         (-4 + 0).. => (),
   |          ^^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = -4 + 0;
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         (VAL).. => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:19:10
   |
LL |         (1 + 4)...1 * 2 => (),
   |          ^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = 1 + 4;
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         (VAL)...1 * 2 => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:19:19
   |
LL |         (1 + 4)...1 * 2 => (),
   |                   ^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = 1 * 2;
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         (1 + 4)...VAL => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:25:9
   |
LL |         0.x()..="y".z() => (),
   |         ^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = 0.x();
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         VAL..="y".z() => (),
   |

error: expected a pattern range bound, found an expression
  --> $DIR/recover-pat-ranges.rs:25:17
   |
LL |         0.x()..="y".z() => (),
   |                 ^^^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +     const VAL: /* Type */ = "y".z();
LL |     match -1 {
LL |         0..=1 => (),
...
LL |
LL ~         0.x()..=VAL => (),
   |

warning: `...` range patterns are deprecated
  --> $DIR/recover-pat-ranges.rs:19:16
   |
LL |         (1 + 4)...1 * 2 => (),
   |                ^^^ help: use `..=` for an inclusive range
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(ellipsis_inclusive_range_patterns)]` (part of `#[warn(rust_2021_compatibility)]`) on by default

error: aborting due to 13 previous errors; 1 warning emitted

